# zed

./: Cargo.toml  LICENSE.md  README.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/backend/: buffer.rs  editor.rs  mod.rs
src/ui/: dashboard.rs  editor.rs  finder.rs  mod.rs
