[package]
name = "zed"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zui-core = "0.0.2"
zui-widgets = "0.0.2"
snafu = "0.6.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
