cargo-features = ["strip"]

[package]
name = "zed"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zui-core = {git = "https://github.com/dumrich/zui.git"}
snafu = "0.6.10"
walkdir = "2"
ropey = "1.3.1"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"
